--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,5 +43,7 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true  
   - md_in_html
   - attr_list
